<resources>
    <string name="app_name">60ºPresidente</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Inicia Sesion</string>
    <string name="dont_have_account">No tienes cuenta?</string>
    <string name="create_here">Crea una <b>aqui.</b></string>
    <string name="hint_email">Correo Electronico</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirma la contraseña</string>

    <string name="toolbar_title_createaccount">Crear Cuenta</string>
    <string name="username_card">60ºPresidente</string>
    <string name="firstword_card">Hace </string>
    <string name="timecard_card">4 dias</string>
    <string name="linkeNumbercard_card">Me gusta</string>

    <string name="tab_search">Elige</string>
    <string name="tab_home">Resultados</string>
    <string name="tab_profile">Comunidad</string>

    <string name="title_elige">CANDIDATOS</string>
    <string name="Create_Acount">Crear cuenta</string>
    <string name="login_error">Lo sentimos un error:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">\"Todo Copas en la playa\"</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas \"Letraset\", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_descriprion">Descripcion</string>
    <string name="text_button_createpost">CREAR POST</string>

    <string name="facebook_app_id">198487450682572</string>

    <string name="dontHaveAccount">No Tienes Cuenta</string>

    <string name="Yo_Elijo">Mi Eleccion</string>
    <string name="tab_Resulatos">Resultados</string>


</resources>
