<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jairopap.plazygram.login.view.LoginActivity"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/logo" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="6dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhile">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhile">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"

                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goContainert"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaiseButtonDark"

                    />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold"
                        android:layout_alignBottom="@+id/createHere" />

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@string/dontHaveAccount"
                        android:onClick="goCreateAccount"
                        android:text="@string/create_here"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold"
                        android:layout_alignParentRight="true"
                        />

                    <ProgressBar
                        android:id="@+id/progressbarLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>